Cambio en Nosotros

--- a/about.html
+++ b/about.html
@@ -130,7 +130,7 @@
                             
                             <div  id="historia" style="height:100%; padding-top:25px; text-align:left;">
                                 <p class="text-large"><h3>Historia</h3></p>
-                                <p align="justify"><strong>OPS S.A.C.I.</strong> es una empresa argentina que desde el año 2001 se especializa en servicios y obras Oil &amp; Gas. Su probada trayectoria le permite satisfacer con éxito las demandas de la industria petrolera convencional y no convencional, con provisi&oacute;n de ingenier&iacute;a, construcci&oacute;n y management.<br>
+                                <p align="justify"><strong>OPS S.A.C.I.</strong> es una empresa argentina que desde el año 2001 se especializa en servicios y obras de Oil &amp; Gas. Su probada trayectoria le permite satisfacer con éxito las demandas de la industria petrolera convencional y no convencional, con provisi&oacute;n de ingenier&iacute;a, construcci&oacute;n y management.<br>
                                   <br>
                                   La compañ&iacute;a desempeña sus actividades con una dotaci&oacute;n de m&aacute;s de 1300 personas calificadas y una flota superior a las 500 unidades propias. Su desempeño la ha posicionado como una empresa eficiente, s&oacute;lida y confiable para sus clientes.<br>
   <br>
