Cambio Obras Ejecutadas

--- a/obras-ejecutadas.html
+++ b/obras-ejecutadas.html
@@ -151,7 +151,7 @@
                             <div class="col-md-6 col-sm-6">
                                 <div class="text-left position-relative overflow-hidden margin-ten no-margin-top">
                                     <a href="construccion-locaciones.html"><img src="images/Obras/obrasEjecutadas_shell.jpg" alt=""/></a>
-                                    <span class="product-name text-uppercase"><a href="construccion-locaciones.html"><strong>Construcci&oacute;n Locaciones</strong></a></span>
+                                    <span class="product-name text-uppercase"><a href="construccion-locaciones.html"><strong>Construcci&oacute;n de Locaciones</strong></a></span>
                                     <span class="product-name text-uppercase"><a href="construccion-locaciones.html"><strong>Cliente:</strong> Shell</a></span>
                                     <span class="product-name text-uppercase"><a href="construccion-locaciones.html">Yacimiento Cruz de Lorena - &Aacute;guila Mora - Neuqu&eacute;n</a></span>
                                 </div>
